--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -1,5 +1,5 @@
 .ResultImage{
-  background: url('./../img/result.jpg');
+  /* background: url('./../img/result.jpg'); */
   position: absolute;
   height: 100%;
   width: 40%;
