--- a/client/src/css/DraggableObject.css
+++ b/client/src/css/DraggableObject.css
@@ -1,14 +1,30 @@
 .DraggableObject{
-  position: relative;
+  /* position: relative;
   display: inline-block;
   overflow: hidden;
   margin: 0;
+  top:0px;
+  left: 0px;
+  z-index: 3;
+  width: 10px;
+  height: 10px; */
   /* padding: 10px; */
+  position: absolute;
+  z-index: 3;
+  height: 200px;
 }
 
 .DraggedElement{
-  max-width:100%;
+  /* max-width:100%;
   max-height: 100%;
   width: 100%;
+  height: 100%; */
+  /* position: absolute;
+  left: 200px;
+  top: 200px;
+  z-index: 99;
+  width: 100px;
+  height: 80px; */
   height: 100%;
+  width: auto;
 }
