--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -1,11 +1,3 @@
-.ResultImage{
-  /* background: url('./../img/result.jpg'); */
-  position: absolute;
-  height: 100%;
-  width: 40%;
-  z-index: 1;
-}
-
 .Handle{
   position: absolute;
   top: 44%;
@@ -42,10 +34,28 @@
   z-index: 3;
 }
 
-.react-resizable-handle {
-  z-index: 99;
-  width: 10px;
-  height: 10px;
-  background: red;
-  position: absolute;
+canvas{
+  margin: 0px !important;
+  padding: 0px !important;
+  position: absolute !important;
+  top:0px !important;
+  left: 0px !important;
+  width: auto !important;
+  height: 100% !important;
+  max-width: 2048px !important;
+  max-height: 1024px !important;
+}
+
+.ResultImage{
+  position: absolute !important;
+  left: 0px !important;
+  top: 0px !important;
+  max-width: 2048px !important;
+  max-height: 1024px !important;
+  height: 100% !important;
+  z-index: 1 !important;
+  display: block !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: 0 0 !important;
 }
