menu items responsive

--- a/client/src/css/Menu.css
+++ b/client/src/css/Menu.css
@@ -120,7 +120,7 @@ h5{
   -webkit-filter: drop-shadow(2px 2px 2p #2222228f);
   filter: drop-shadow(2px 2px 2px #2222228f);
   filter: drop-shadow(2px 2px 2px #2222228f);
-  width: 3.5rem;
+  width: 6.4vh;
   margin: 5px;
   display: inline-block !important;
 }
