--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -31,7 +31,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .Overlay{
@@ -44,7 +44,7 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJElEQVQYV2
   top: 0px;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 1;
 }
 
 .Intro{
@@ -69,13 +69,15 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJElEQVQYV2
   z-index: 1;
   font-size: 10px;
   color: white;
-  font-weight: lighter;
   position: absolute;
   left: 50%;
   bottom: 1rem;
   transform: translate(-50% , 0%);
   line-height: 20px;
   text-align: center;
+  background: black;
+  padding: 1px 5px 3px 5px;
+  font-family: 'heroic-condensed-book', 'Helvetica', serif;
 }
 
 .StartBtn{
