--- a/client/src/css/Menu.css
+++ b/client/src/css/Menu.css
@@ -37,7 +37,7 @@
 /* General sidebar styles */
 .bm-menu {
   background:rgba(34, 34, 34, 0.99);
-  padding: 2.2em 0.6em 0;
+  padding: 0.5em 0.4em 0;
   font-size: 1.15em;
   overflow-y: hidden !important;
   text-align: center;
@@ -66,7 +66,7 @@
 
 .BrushColor{
   margin: 2px;
-  font-size: 14px;
+  font-size: 12px;
   display: inline-block !important;
   padding: 3px 5px;
   border: none;
@@ -95,7 +95,7 @@ h5{
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  margin: 8px auto;
+  margin: 2px auto;
   -webkit-transition: .2s;
   transition: opacity .2s;
 }
@@ -141,10 +141,10 @@ h5{
   padding: 10px;
   display: inline-block !important;
   cursor: pointer;
-  margin: 10px;
+  margin: 0.6vw;
   animation-duration: 2s;
   border: none;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   border-radius: 4px;
   padding: 5px 10px;
   font-family: 'heroic-condensed-regular', 'Helvetica', serif;
@@ -188,4 +188,11 @@ button:focus {outline:0;}
 .BtnIcon {
   width: 20px;
   margin-right: 5px;
+}
+
+.Divider{
+  height: 1px;
+  width: 60%;
+  margin: 4px auto;
+  background: rgba(255, 255, 255, 0.308);
 }
