bring back to drawing button to front

--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -72,8 +72,8 @@ canvas{
   background-position: 0 0 !important;
 }
 
-#BackToDrawingBtn {
+.BackToDrawingBtn {
   top: 120px;
-  z-index: 3;
+  z-index: 4;
   position: absolute;
 }
