remove button on draggable object

--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -77,3 +77,11 @@ canvas{
   z-index: 4;
   position: absolute;
 }
+
+.RemoveDraggableObject {
+  transform: scale(1.5);
+  position: absolute;
+  margin: 0.5em;
+  color: white;
+  cursor: pointer;
+}
