--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -44,6 +44,7 @@ canvas{
   height: 100% !important;
   max-width: 2048px !important;
   max-height: 1024px !important;
+  cursor: none;
 }
 
 #objects-container {
