--- a/client/src/css/Menu.css
+++ b/client/src/css/Menu.css
@@ -37,7 +37,7 @@
 /* General sidebar styles */
 .bm-menu {
   background:rgba(34, 34, 34, 0.99);
-  padding: 0.5em 0.4em 0;
+  padding: 0.5em 0.9em 0;
   font-size: 1.15em;
   overflow-y: hidden !important;
   text-align: center;
@@ -65,13 +65,17 @@
 }
 
 .BrushColor{
-  margin: 2px;
+  margin: 3px;
   font-size: 12px;
   display: inline-block !important;
   padding: 3px 5px;
   border: none;
   animation-duration: 2s;
   cursor: pointer;
+  box-shadow: 2px 2px 5px rgba(12, 12, 12, 0.445);
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
   box-shadow: 2px 2px 5px rgba(12, 12, 12, 0.445);
 }
 
@@ -81,7 +85,7 @@
 
 h5{
   color: white;
-  margin: 8px 0px 10px 0px;
+  margin: 2vh 0px 13px 0px;
   border-bottom: 1px solid white;
   display: inline-block !important;
   font-size: 13px;
@@ -91,7 +95,7 @@ h5{
 .brushSizeSlider {
   -webkit-appearance: none;
   width: 80%;
-  height: 10px;
+  height: 2px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
@@ -107,7 +111,7 @@ h5{
 .brushSizeSlider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 10px;
+  width: 7px;
   height: 15px;
   background: rgb(255, 255, 255);
   cursor: pointer;
@@ -195,4 +199,24 @@ button:focus {outline:0;}
   width: 60%;
   margin: 4px auto;
   background: rgba(255, 255, 255, 0.308);
+}
+
+.BrushHolder{
+  display: inline-block;
+  position: relative;
+}
+
+.BrushColor:hover{
+  transform: scale(1.3)
+}
+
+.Label{
+  position: absolute;
+  z-index: 8;
+  top: 35px;
+  left: 0px;
+  font-size: 14px;
+  background: black;
+  color:white;
+  padding: 2px 4px;
 }
