--- a/client/src/css/Drawing.css
+++ b/client/src/css/Drawing.css
@@ -86,3 +86,34 @@ canvas{
   color: white;
   cursor: pointer;
 }
+
+.TimelineContainer {
+  position: fixed;
+  z-index: 5;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+  height: 50px;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.Timeline {
+  flex: 1;
+  height: 90%;
+  border-radius: 5px;
+  border: 1px solid white;
+  margin-left: 1em;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: 0 0 !important;
+}
+
+.TimelineHandle {
+  position: relative;
+  width: 1px;
+  height: 100%;
+  background: red;
+}
