--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -110,3 +110,19 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJElEQVQYV2
   margin: auto;
   max-width: 200px;
 }
+
+@media only screen 
+  and (min-device-width: 300px) 
+  and (max-device-width: 1000px)  {
+    .LandingPage{
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      padding: 1em;
+    }
+}
